--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "reactstrap": "^8.9.0",
+    "recharts": "^2.0.9",
     "style-loader": "^3.0.0",
     "web-vitals": "^1.1.2"
   },
